; ModuleID = '/home/carl/AnghaBench/kphp-kdb/net/extr_net-aio.c_create_aio_query.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/net/extr_net-aio.c_create_aio_query.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.aio_connection = type { i32, %struct.conn_query* }
%struct.conn_query = type { i64, %struct.TYPE_2__, %struct.conn_query_functions*, i64, %struct.connection*, %struct.connection*, i64 }
%struct.TYPE_2__ = type { i64 }
%struct.connection = type { i32 }
%struct.conn_query_functions = type { i32 }

@verbosity = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [36 x i8] c"create_query(%p[%d], %p[%d]): Q=%p\0A\00", align 1
@CLOCK_MONOTONIC = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [39 x i8] c"!NOTICE! inserting second query to %p\0A\00", align 1
@active_aio_queries = common dso_local global i32 0, align 4
@tot_aio_queries = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [27 x i8] c"after insert_conn_query()\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @create_aio_query(%struct.aio_connection* %0, %struct.connection* %1, double %2, %struct.conn_query_functions* %3) #0 {
  %5 = alloca %struct.aio_connection*, align 8
  %6 = alloca %struct.connection*, align 8
  %7 = alloca double, align 8
  %8 = alloca %struct.conn_query_functions*, align 8
  %9 = alloca %struct.conn_query*, align 8
  store %struct.aio_connection* %0, %struct.aio_connection** %5, align 8
  store %struct.connection* %1, %struct.connection** %6, align 8
  store double %2, double* %7, align 8
  store %struct.conn_query_functions* %3, %struct.conn_query_functions** %8, align 8
  %10 = call %struct.conn_query* @zmalloc(i32 56)
  store %struct.conn_query* %10, %struct.conn_query** %9, align 8
  %11 = load i32, i32* @verbosity, align 4
  %12 = icmp sgt i32 %11, 1
  br i1 %12, label %13, label %25

13:                                               ; preds = %4
  %14 = load i32, i32* @stderr, align 4
  %15 = load %struct.aio_connection*, %struct.aio_connection** %5, align 8
  %16 = load %struct.aio_connection*, %struct.aio_connection** %5, align 8
  %17 = getelementptr inbounds %struct.aio_connection, %struct.aio_connection* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = load %struct.connection*, %struct.connection** %6, align 8
  %20 = load %struct.connection*, %struct.connection** %6, align 8
  %21 = getelementptr inbounds %struct.connection, %struct.connection* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = load %struct.conn_query*, %struct.conn_query** %9, align 8
  %24 = call i32 (i32, i8*, ...) @fprintf(i32 %14, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0), %struct.aio_connection* %15, i32 %18, %struct.connection* %19, i32 %22, %struct.conn_query* %23)
  br label %25

25:                                               ; preds = %13, %4
  %26 = load %struct.conn_query*, %struct.conn_query** %9, align 8
  %27 = getelementptr inbounds %struct.conn_query, %struct.conn_query* %26, i32 0, i32 6
  store i64 0, i64* %27, align 8
  %28 = load %struct.aio_connection*, %struct.aio_connection** %5, align 8
  %29 = bitcast %struct.aio_connection* %28 to %struct.connection*
  %30 = load %struct.conn_query*, %struct.conn_query** %9, align 8
  %31 = getelementptr inbounds %struct.conn_query, %struct.conn_query* %30, i32 0, i32 5
  store %struct.connection* %29, %struct.connection** %31, align 8
  %32 = load %struct.connection*, %struct.connection** %6, align 8
  %33 = load %struct.conn_query*, %struct.conn_query** %9, align 8
  %34 = getelementptr inbounds %struct.conn_query, %struct.conn_query* %33, i32 0, i32 4
  store %struct.connection* %32, %struct.connection** %34, align 8
  %35 = load i32, i32* @CLOCK_MONOTONIC, align 4
  %36 = call i64 @get_utime(i32 %35)
  %37 = load %struct.conn_query*, %struct.conn_query** %9, align 8
  %38 = getelementptr inbounds %struct.conn_query, %struct.conn_query* %37, i32 0, i32 0
  store i64 %36, i64* %38, align 8
  %39 = load %struct.conn_query*, %struct.conn_query** %9, align 8
  %40 = getelementptr inbounds %struct.conn_query, %struct.conn_query* %39, i32 0, i32 3
  store i64 0, i64* %40, align 8
  %41 = load %struct.conn_query_functions*, %struct.conn_query_functions** %8, align 8
  %42 = load %struct.conn_query*, %struct.conn_query** %9, align 8
  %43 = getelementptr inbounds %struct.conn_query, %struct.conn_query* %42, i32 0, i32 2
  store %struct.conn_query_functions* %41, %struct.conn_query_functions** %43, align 8
  %44 = load double, double* %7, align 8
  %45 = fcmp ogt double %44, 0.000000e+00
  br i1 %45, label %46, label %53

46:                                               ; preds = %25
  %47 = load %struct.conn_query*, %struct.conn_query** %9, align 8
  %48 = getelementptr inbounds %struct.conn_query, %struct.conn_query* %47, i32 0, i32 0
  %49 = load i64, i64* %48, align 8
  %50 = sitofp i64 %49 to double
  %51 = load double, double* %7, align 8
  %52 = fadd double %50, %51
  br label %54

53:                                               ; preds = %25
  br label %54

54:                                               ; preds = %53, %46
  %55 = phi double [ %52, %46 ], [ 0.000000e+00, %53 ]
  %56 = fptosi double %55 to i64
  %57 = load %struct.conn_query*, %struct.conn_query** %9, align 8
  %58 = getelementptr inbounds %struct.conn_query, %struct.conn_query* %57, i32 0, i32 1
  %59 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %58, i32 0, i32 0
  store i64 %56, i64* %59, align 8
  %60 = load i32, i32* @verbosity, align 4
  %61 = icmp sgt i32 %60, 1
  br i1 %61, label %62, label %73

62:                                               ; preds = %54
  %63 = load %struct.aio_connection*, %struct.aio_connection** %5, align 8
  %64 = getelementptr inbounds %struct.aio_connection, %struct.aio_connection* %63, i32 0, i32 1
  %65 = load %struct.conn_query*, %struct.conn_query** %64, align 8
  %66 = load %struct.aio_connection*, %struct.aio_connection** %5, align 8
  %67 = bitcast %struct.aio_connection* %66 to %struct.conn_query*
  %68 = icmp ne %struct.conn_query* %65, %67
  br i1 %68, label %69, label %73

69:                                               ; preds = %62
  %70 = load i32, i32* @stderr, align 4
  %71 = load %struct.aio_connection*, %struct.aio_connection** %5, align 8
  %72 = call i32 (i32, i8*, ...) @fprintf(i32 %70, i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.1, i64 0, i64 0), %struct.aio_connection* %71)
  br label %73

73:                                               ; preds = %69, %62, %54
  %74 = load %struct.conn_query*, %struct.conn_query** %9, align 8
  %75 = call i32 @insert_conn_query(%struct.conn_query* %74)
  %76 = load i32, i32* @active_aio_queries, align 4
  %77 = add nsw i32 %76, 1
  store i32 %77, i32* @active_aio_queries, align 4
  %78 = load i32, i32* @tot_aio_queries, align 4
  %79 = add nsw i32 %78, 1
  store i32 %79, i32* @tot_aio_queries, align 4
  %80 = load i32, i32* @verbosity, align 4
  %81 = icmp sgt i32 %80, 1
  br i1 %81, label %82, label %85

82:                                               ; preds = %73
  %83 = load i32, i32* @stderr, align 4
  %84 = call i32 (i32, i8*, ...) @fprintf(i32 %83, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.2, i64 0, i64 0))
  br label %85

85:                                               ; preds = %82, %73
  ret i32 1
}

declare dso_local %struct.conn_query* @zmalloc(i32) #1

declare dso_local i32 @fprintf(i32, i8*, ...) #1

declare dso_local i64 @get_utime(i32) #1

declare dso_local i32 @insert_conn_query(%struct.conn_query*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
